--- a/custom/epoc-theme/home.en.html
+++ b/custom/epoc-theme/home.en.html
@@ -23,7 +23,7 @@
     <div class="container px-4 sm:px-8 lg:grid lg:grid-cols-2 lg:gap-x-8">
         <div class="mb-16 lg:mt-32 xl:mt-40 xl:mr-12">
             <h1 class="h1-medium mb-5">ePoc, mobile learning free and open source</h1>
-            <p class="p-large mb-8">ePoc (<b>E</b>lectronic <b>P</b>ocket <b>O</b>pen <b>C</b>ourse) is a complete mobile learning free and open source solution. Discover our courses or create your own using <a href="./editor">the editor</a>. </p>
+            <p class="p-large mb-8">ePoc (<b>E</b>lectronic <b>P</b>ocket <b>O</b>pen <b>C</b>ourse) is a complete free and open source mobile learning solution. Discover our courses and/or create your own using <a href="./editor">the editor</a>. </p>
             <p class="p-large mb-8">Free and <a href="{{ config.repo_url }}" target="_blank">open source</a>. Developed by <a href="https://inria.fr/" target="_blank">Inria</a>.</p>
             <a class="btn-solid-lg" href="{{ page.meta.apple_link if page.meta.apple_link else config.extra.apple_link }}"><i class="fab fa-apple"></i>Download</a>
             <a class="btn-solid-lg" href="{{ page.meta.google_link if page.meta.apple_link else config.extra.google_link }}"><i class="fab fa-google-play"></i>Download</a>
@@ -120,7 +120,7 @@
         <div class="lg:col-span-5">
             <div class="xl:mt-32">
                 <h2 class="mb-6">Active engagement</h2>
-                <p class="mb-4">A alternation between learning and activities within an engaging educational path specially designed for mobile..</p>
+                <p class="mb-4">An alternation between learning and activities within an engaging educational path specially designed for mobile.</p>
                 <p class="mb-4">Enjoy varied and fun exercises such as drag and drop, swipes, qcm and many more.</p>
             </div>
         </div> <!-- end of col -->
@@ -145,7 +145,7 @@
         <div class="lg:col-span-5">
             <div class="mb-16 lg:mb-0 xl:mt-16">
                 <h2 class="mb-6">Learn at your own pace</h2>
-                <p class="mb-4">The training courses specially designed for mobile use are divided into short and fun modules for step-by-step progression.</p>
+                <p class="mb-4">The training courses, specially designed for mobile use, are divided into short and fun modules for step-by-step progression.</p>
                 <p class="mb-4">Repeat the activities as many times as necessary to obtain the certificate.</p>
             </div>
         </div> <!-- end of col -->
