--- a/custom/epoc-theme/home.html
+++ b/custom/epoc-theme/home.html
@@ -24,7 +24,7 @@
         <div class="mb-16 lg:mt-32 xl:mt-40 xl:mr-12">
             <h1 class="h1-medium mb-5">ePoc, l'apprentissage sur mobile libre et ouvert</h1>
             <p class="p-large mb-8">ePoc (<b>E</b>lectronic <b>P</b>ocket <b>O</b>pen <b>C</b>ourse) est une solution complète de mobile learning libre et ouverte. Découvrez <a href="./epocs">nos cours</a> ou créez le votre à l'aide de <a href="./editor">l'éditeur</a>. </p>
-            <p class="p-large mb-8">Gratuite et <a href="{{ config.repo_url }}" target="_blank">open source</a>. Développé par <a href="https://inria.fr/" target="_blank">Inria</a>.</p>
+            <p class="p-large mb-8">Gratuite et <a href="{{ config.repo_url }}" target="_blank">open source</a>. Développée par <a href="https://inria.fr/" target="_blank">Inria</a>.</p>
             <a class="btn-solid-lg" href="{{ page.meta.apple_link if page.meta.apple_link else config.extra.apple_link }}"><i class="fab fa-apple"></i>Télécharger</a>
             <a class="btn-solid-lg" href="{{ page.meta.google_link if page.meta.apple_link else config.extra.google_link }}"><i class="fab fa-google-play"></i>Télécharger</a>
         </div>
