--- a/custom/epoc-theme/epoc.html
+++ b/custom/epoc-theme/epoc.html
@@ -29,12 +29,22 @@
                     <i class="fa fa-lock"></i></a> Cette formation est réservée au personnel Inria.
                 </p>
             {% endif %}
+            {% if page.meta.qrcode %}
+            <h3 class="h3-large mb-5">Télécharger la formation</h3>
+            <ol class="mb-4">
+                <li>1. Télécharger l'application ePoc (<a class="underline" href="{{ page.meta.apple_link if page.meta.apple_link else config.extra.apple_link }}">iOS</a> ou <a class="underline" href="{{ page.meta.google_link if page.meta.google_link else config.extra.google_link }}">Android</a>)</li>
+                <li>2. Cliquer sur le bouton ajouter un ePoc</li>
+                <li>3. Scanner le QR Code ci -dessous :</li>
+            </ol>
+            <img src="{{page.meta.qrcode }}" alt="QR code pour télécharger {{ page.meta.title }}">
+            {% else %}
             <a class="btn-solid-lg" href="{{ page.meta.apple_link if page.meta.apple_link else config.extra.apple_link }}">
                 <i class="fab fa-apple"></i>Télécharger
             </a>
-            <a class="btn-solid-lg" href="{{ page.meta.google_link if page.meta.apple_link else config.extra.google_link }}">
+            <a class="btn-solid-lg" href="{{ page.meta.google_link if page.meta.google_link else config.extra.google_link }}">
                 <i class="fab fa-google-play"></i>Télécharger
             </a>
+            {% endif %}
         </div>
         <div class="xl:text-right">
             <img class="inline" src="{{ page.meta.img }}" alt="Screenshot {{ page.meta.title }}" />
