Change source code link

--- a/custom/epoc-theme/copyright.en.html
+++ b/custom/epoc-theme/copyright.en.html
@@ -4,7 +4,7 @@
         <ul class="mb-4 list-unstyled p-small">
             <li class="mb-2">
                 <a href="{{ config.repo_url }}" target="_blank">
-                    <i class="fab fa-gitlab"></i> Source code
+                    <i class="fab fa-github"></i> Source code
                 </a>
             </li>
         </ul>
