--- a/custom/epoc-theme/copyright.html
+++ b/custom/epoc-theme/copyright.html
@@ -6,7 +6,7 @@
             <li class="mb-2"><a href="/privacy">Vie privée</a></li>
             <li class="mb-2">
                 <a href="{{ config.repo_url }}" target="_blank">
-                    <i class="fab fa-gitlab"></i> Code source
+                    <i class="fab fa-github"></i> Code source
                 </a>
             </li>
         </ul>
